# ILSS

./: main.py  pyproject.toml  settings.py  start_app.py
application/: application.py  container.py  routers.py
clients/: mail_client.py
database/: people_model.py  progress_model.py
logic/: message_parser.py  message_processor.py  parser.py  rules.py
logic/bot/: keyboard.py  states.py  tg_bot.py
persistance/: models.py  postgres_connection.py  repository.py
