[tool.poetry]
name = "ilss"
version = "0.1.0"
description = ""
authors = ["oyzybareva <oyzybareva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"
motor = "^3.1.2"
sqlalchemy = "^2.0.17"
psycopg = "3.1.9"
psycopg2-binary = "^2.9.6"
botogram = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
