[tool.poetry]
name = "ilss"
version = "0.1.0"
description = ""
authors = ["oyzybareva <oyzybareva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"
sqlalchemy = "^2.0.17"
psycopg = "3.1.9"
psycopg2-binary = "^2.9.6"
botogram = "^0.5"
aiogram = "^2.25.1"
apscheduler = "^3.10.1"
fastapi = "^0.98.0"
injector = "^0.20.1"
uvicorn = "^0.22.0"
python-telegram-bot-calendar = "^1.0.5"
fastapi-utils-sqlalch2 = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
